sass/_firmware.scss
@import "flexbox", "variables";

// fixed heights are the only working option to do
// good slideUp / slideDown transitions without JS
$height-buffalo:  84px;
$height-dlink:    84px;
$height-linksys:  84px;
$height-tplink:   1016px;
$height-ubiquiti: 168px;

.vendor,
.device,
.version {
  display: none;

  + label {
    display: block;
    color: #fff;
    cursor: pointer;
  }
}

.vendor + label {
  margin-bottom: 16px;
  padding: 6px 12px;

  font: {
    weight: 300;
    size: 20px;
  }

  background-color: $freifunk-magenta;
  transition: background-color .4s;

  &:hover {
    background-color: $freifunk-yellow;
  }
}

.vendor:checked + label {
  background-color: $freifunk-yellow;
}

.device-list {
  @include display-flex;
  @include justify-content(space-between);
  @include flex-wrap(wrap);

  height: 0;
  overflow-y: hidden;

  transition: height .4s;
}

#vendor-buffalo:checked + label + .device-list {
  height: $height-buffalo;
}

#vendor-d-link:checked + label + .device-list {
  height: $height-dlink;
}

#vendor-linksys:checked + label + .device-list {
  height: $height-linksys;
}

#vendor-tp-link:checked + label + .device-list {
  height: $height-tplink;
}

#vendor-ubiquiti:checked + label + .device-list {
  height: $height-ubiquiti;
}

.device-wrap {
  position: relative;
  overflow: hidden;
  margin-bottom: 16px;
}

.device + label {
  width: 340px;

  padding: 24px;

  background-color: #aaa;
  transition: background-color .4s;

  &:hover {
    background-color: #777;
  }
}

.device:checked + label {
  background-color: #777;
}

.versions {
  @include display-flex;
  @include align-items(flex-start);

  position: absolute;
  right: 8px;

  top: -30px;
  transition: top .4s;
}

.device:checked ~ .versions {
  top: 8px;
}

.version + label {
  margin-left: 8px;
  padding: 3px 6px;

  background-color: #aaa;
  transition: background-color .4s;
}

.version:checked + label {
  background-color: $freifunk-blue;
}

.download-button {
  -moz-appearance: none;
  -webkit-appearance: none;
  border: 0 none;

  margin-top: 16px;
  padding: 16px 24px;

  font: {
    weight: 300;
    size: 15px;
  }

  color: #fff;
  background-color: $freifunk-blue;
  transition: background-color .4s;

  &:hover {
    background-color: darken($freifunk-blue, 10%) !important;
  }
}

